fix that crazy gap in Projects section
...I really should just redo this site. It's kind of a sinking ship at this point.

--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,7 @@ footer .footer-below {
 #intro-body {
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 #intro-background {
